# rustest

./: .gitignore  .pre-commit-config.yaml  ASYNC_PARALLEL_REVIEW.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_REPORT.md  COMPATIBILITY_TESTING_RESULTS.md  COMPLETE_COMPATIBILITY_ANALYSIS.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_UPDATES_SUMMARY.md  EXPLORATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDICATIF_EXPLORATION.md  PHASE_1_RESULTS.md  PLUGIN_SUPPORT_SUMMARY.md  PYTEST_PLUGIN_SUPPORT_ANALYSIS.md  README.md  REQUEST_OBJECT_ENHANCEMENTS.md  RUST_OUTPUT_IMPLEMENTATION_PLAN.md  benchmark_results.json  generate_comparison.py  mkdocs.yml  profile_tests.py  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  update-demos.yml
docs/: CHANGELOG.md  async-event-loops.md  changelog.md  index.md  migration-guide.md
docs/advanced/: comparison.md  development.md  performance.md  pytest-compat.md  pytest-plugins.md
docs/api/: core.md  overview.md  reporting.md
docs/from-pytest/: comparison.md  limitations.md  plugins.md
docs/getting-started/: quickstart.md
docs/guide/: assertions.md  async-testing.md  cli.md  fixtures.md  markdown-testing.md  marks.md  project-structure.md  python-api.md  test-classes.md  writing-tests.md
docs/investigations/: issue-122-compat-performance.md
docs/new-to-testing/: first-test.md  parametrization.md  why-test.md
docs/superpowers/plans/: 2026-03-30-surgical-deduplication.md
docs/superpowers/specs/: 2026-03-30-surgical-deduplication-design.md
examples/: README.md  indicatif_hierarchical_poc.rs  indicatif_poc.rs  indicatif_progress_bar_poc.rs
examples/tests/: conftest.py
python/rustest/: __init__.py  _approx.py  _cli.py  _decorators.py  _reporting.py  _runtime_config.py  _rust.py  _rust.pyi  _watch.py  approx.py  async_executor.py  builtin_fixtures.py  cli.py  core.py  decorators.py  error_formatter.py  event_router.py  fixture_registry.py  rust.py  rust.pyi
python/rustest/_pytest_stub/: __init__.py  config.py  main.py  monkeypatch.py  nodes.py  outcomes.py
python/rustest/_pytest_stub/assertion/: __init__.py  rewrite.py
python/rustest/_pytest_stub/mark/: __init__.py  structures.py
python/rustest/compat/: pytest.py
python/rustest/renderers/: rich_renderer.py
python/tests/: helpers.py  test_approx.py  test_asyncio_decorator.py  test_builtin_fixtures.py  test_cli.py  test_collection_feedback.py  test_core.py  test_decorators.py  test_decorators_extended.py  test_discovery_exclusions.py  test_error_handling.py  test_exception_stubs.py  test_fixture_decorator.py  test_integration.py  test_mark_filtering.py  test_marks.py  test_package_scope.py  test_pytest_compat_features.py  test_reporting.py  test_request_object.py  test_runtime_config.py
scripts/: profile_collection.py
src/: cache.rs  discovery.rs  execution.rs  lib.rs  model.rs  model_tests.rs  parallel.rs  python_support.rs  python_support_tests.rs
src/discovery/: mod.rs
src/execution/: mod.rs
src/output/: event_stream.rs  events.rs  formatter.rs  mod.rs  renderer.rs  spinner_display.rs
src/watch/: dependency_tracker.rs  mod.rs
tests/: conftest.py  cross_file_test_a.py  cross_file_test_b.py  test_async_autouse_event_loop.py  test_async_autouse_session_fixture.py  test_async_fixture_event_loop_issue.py  test_async_fixture_regression.py  test_async_fixtures.py  test_async_output_capture.py  test_async_teardown_lifecycle.py  test_asyncio.py  test_asyncio_config.py  test_asyncio_pytest_native.py  test_class_edge_cases.py  test_class_fixtures_advanced.py  test_fixture_class_scope.py  test_fixture_dependency_chains.py  test_fixture_parametrization.py  test_fixture_parametrization_pytest_compat.py  test_fixture_params_pytest_native.py  test_fixture_resolution_order.py  test_fixture_scope_edge_cases.py  test_getfixturevalue.py  test_indirect_parametrization.py  test_loop_isolation_regression.py  test_loop_scope_detection.py  test_loop_scope_permutations.py  test_output.py  test_parallel_async.py  test_parametrize_data_types.py  test_patch_decorator.py  test_readme_examples.py  test_regression_bugs.py  test_skip.py  test_underscore_fixtures_integration.py  test_usefixtures_async_session.py  test_xfail.py  test_yield_fixtures.py
tests/integration/: pytest_project_layouts.py  test_loop_scope_mismatch_error.py  test_nested_conftest_autouse.py  test_project_layouts.py  test_pytest_fixture_detection.py
tests/integration/layouts/: test_project_layouts.py
tests/pytest_compat/: README.md
tests/pytest_compat/selected/: .gitkeep  test_basic_collection.py
tests/python_suite/: README.md  conftest.py  test_complex_parametrize.py  test_errors.py
tests/test_conftest_basic/: conftest.py
tests/test_conftest_integration/: conftest.py
tests/test_conftest_nested/: conftest.py  test_root.py
tests/test_conftest_nested/subdir/: conftest.py  test_child.py
tests/test_conftest_nested/subdir/deepdir/: conftest.py  test_deep.py
tests/test_conftest_override/: conftest.py
tests/test_conftest_scopes/: conftest.py  test_scopes_a.py  test_scopes_b.py
tests/test_conftest_yield/: conftest.py
tests/test_pytest_plugins_and_applymarker/: conftest.py  fixtures_module.py  test_main.py
tests/test_relative_imports/: test_using_relative.py  test_using_relative_deep.py
tests/test_relative_imports/helpers/: __init__.py  helper_module.py
tests/test_rustest_fixtures/: conftest.py  fixtures_module.py  test_main.py
