[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "rustest"
version = "0.1.0"
description = "Rust powered pytest-compatible runner"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "rustest contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typing_extensions>=4.8",
]
scripts = { rustest = "rustest.__main__:main" }

[project.optional-dependencies]
dev = [
    "basedpyright>=1.19",
    "maturin>=1.4,<2",
    "poethepoet>=0.22",
    "pre-commit>=3.5",
    "pytest>=7.0",
    "ruff>=0.1.9",
]

[project.urls]
Homepage = "https://example.com/rustest"

[tool.maturin]
module-name = "rustest._rust"
python-source = "python"

[tool.poe.tasks]
build = "uv build"
dev = "uv run maturin develop"
fmt = "cargo fmt"
lint = "uv run --with dev ruff check python"
typecheck = "uv run --with dev basedpyright python"
pytests = "uv run pytest python/tests -v"
unit = "uv run rustest examples/tests/"

[tool.ruff]
line-length = 100

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
reportMissingTypeStubs = false
reportImportCycles = false
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
include = ["python/rustest"]
exclude = ["**/__pycache__", "**/.*", "**/*.pyc", "**/tests"]

[tool.uv]
managed = true

[tool.uv.sources]
rustest = { path = "." }
